--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "@angular/common": "~10.0.3",
     "@angular/compiler": "~10.0.3",
     "@angular/core": "~10.0.3",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~10.0.3",
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@types/express": "^4.17.11",
+    "bootstrap-icons": "^1.4.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "firebase": "^8.4.1",
+    "firebase-admin": "^9.6.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
